syntax = "proto3";

option go_package = ".;speakingExam";

package speakingExam;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service UserService {
  rpc ListUsers(google.protobuf.Empty) returns (ListUserResponse);
  rpc getUser(GetUserRequest) returns (User);
  rpc createUser(CreateUserRequest) returns (User);
}

message ListUserResponse {
  repeated User user = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message CreateUserRequest {
  int64 exam_id = 1;
}

message User {
  int64 id = 1;
  string login_id = 2;
  string password_hash = 3;
  int64 type = 4;
  int64 exam_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}